<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Swhite"
    android:padding="16dp">


    <Button
        android:id="@+id/btnVoiceTranslation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="startVoiceTranslationActivity"
        android:text="@string/voice_translation" />

    <Button
        android:id="@+id/btnTextTranslation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnVoiceTranslation"
        android:layout_marginTop="23dp"
        android:backgroundTint="@color/blue"
        android:onClick="startTextTranslationActivity"
        android:text="@string/text_translation" />
    <Button
        android:id="@+id/btnViewTranslationHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnTextTranslation"
        android:layout_marginTop="23dp"
        android:backgroundTint="@color/blue"
        android:onClick="startViewHistoryActivity"
        android:text="@string/view_history" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnViewTranslationHistory"
        android:layout_marginTop="34dp"
        android:text="@string/logout"
        app:cornerRadius="20dp" />


</RelativeLayout>
