<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".TextTranslationActivity">

    <ScrollView
        android:layout_above="@+id/optionsLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sourceLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_english"
                android:minHeight="100dp"
                android:gravity="start"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/destinationLanguageTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/optionsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/speakOutBtn"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sourceLanguageChooseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/english"
            app:backgroundTint="@color/blue"
            app:cornerRadius="10dp" />

        <ImageButton
            android:id="@+id/voiceInputBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_mic_black_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/destinationLanguageChooseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hindi"
            app:backgroundTint="@color/blue"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/speakOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_g_translate_24"
        android:text="@string/speak_out" />

</RelativeLayout>
