<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".TextTranslationActivity">
    <ScrollView
        android:layout_above="@+id/optionsLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sourceLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_english"
                android:minHeight="100dp"
                android:gravity="start"
                android:textSize="18sp"/>


            <TextView
                android:id="@+id/destinationLanguageTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textStyle="bold"
                android:textSize="18sp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageButton
                    android:id="@+id/speakResultBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_volume_up_24"
                    android:contentDescription="@string/speak_result"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:id="@+id/speakResultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Speak Out"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/speakResultBtn"
                    android:layout_alignTop="@id/speakResultBtn"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/optionsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_above="@+id/translateBtn">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sourceLanguageChooseBtn"
            app:backgroundTint="@color/blue"
            android:text="@string/english"
            app:cornerRadius="10dp"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_forward_24"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/destinationLanguageChooseBtn"
            android:text="@string/hindi"
            app:backgroundTint="@color/blue"
            app:cornerRadius="10dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/translateBtn"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_g_translate_24"
        android:text="@string/translate"/>

</RelativeLayout>